<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>com.roiland.platform</groupId>
    <modelVersion>4.0.0</modelVersion>
    <version>1.0.0</version>

    <artifactId>roiland-examples-netty-callback</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <maven.plugin.compiler>2.0.2</maven.plugin.compiler>
        <maven.plugin.resources>2.6</maven.plugin.resources>
        <maven.plugin.javadoc>2.10.3</maven.plugin.javadoc>

        <roiland.socket.version>3.0.3-SNAPSHOT</roiland.socket.version>
        <roiland.zookeeper.version>3.0.3-SNAPSHOT</roiland.zookeeper.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.roiland.platform</groupId>
            <artifactId>roiland-socket-client</artifactId>
            <version>${roiland.socket.version}</version>
        </dependency>

        <dependency>
            <groupId>com.roiland.platform</groupId>
            <artifactId>roiland-zookeeper-log4j-kafka</artifactId>
            <version>${roiland.zookeeper.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.compiler}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.plugin.resources}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.plugin.javadoc}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.3</version>
                <configuration>
                    <repositoryLayout>flat</repositoryLayout>
                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                    <daemons>
                        <daemon>
                            <id>${project.name}</id>
                            <mainClass>com.roiland.platform.examples.netty.NettyBootstrap</mainClass>
                            <platforms>
                                <platform>jsw</platform>
                            </platforms>
                            <jvmSettings>
                                <extraArguments>
                                    <!--<extraArgument>-Xms256m</extraArgument>
                                    <extraArgument>-Xmx2048m</extraArgument>
                                    <extraArgument>-XX:+AggressiveOpts</extraArgument>-->
                                    <!-- 远程JMX -->
                                    <!--<extraArgument>-Dcom.sun.management.jmxremote </extraArgument>
                                    <extraArgument>-Dcom.sun.management.jmxremote.port=1984</extraArgument>
                                    <extraArgument>-Dcom.sun.management.jmxremote.authenticate=false </extraArgument>
                                    <extraArgument>-Dcom.sun.management.jmxremote.ssl=false </extraArgument>-->
                                    <!--<extraArgument>-XX:+UseCondCardMark</extraArgument>
                                    <extraArgument>-XX:CMSWaitDuration=250</extraArgument>
                                    <extraArgument>-XX:+UseParNewGC</extraArgument>
                                    <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
                                    <extraArgument>-XX:CMSInitiatingOccupancyFraction=75</extraArgument>
                                    <extraArgument>-XX:+UseCMSInitiatingOccupancyOnly</extraArgument>-->
                                    <!--<extraArgument>-XX:PermSize=48m</extraArgument>
                                    <extraArgument>-XX:MaxPermSize=48m</extraArgument>
                                    <extraArgument>-XX:+UseG1GC</extraArgument>
                                    <extraArgument>-XX:MaxGCPauseMillis=20</extraArgument>
                                    <extraArgument>-XX:InitiatingHeapOccupancyPercent=35</extraArgument>-->
                                    <extraArgument>-XX:+UseParNewGC</extraArgument>
                                    <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
                                    <extraArgument>-XX:CMSInitiatingOccupancyFraction=70</extraArgument>
                                </extraArguments>
                            </jvmSettings>
                            <generatorConfigurations>
                                <generatorConfiguration>
                                    <generator>jsw</generator>
                                    <configuration>
                                        <property>
                                            <name>set.default.REPO_DIR</name>
                                            <value>lib</value>
                                        </property>
                                        <property>
                                            <name>wrapper.logfile</name>
                                            <value>logs/wrapper.log</value>
                                        </property>
                                    </configuration>
                                </generatorConfiguration>
                            </generatorConfigurations>
                        </daemon>
                    </daemons>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>